# ibchooks-secretVRF

./: .gitignore
consumer-side/: Cargo.toml
consumer-side-proxy/: Cargo.toml
consumer-side-proxy/artifacts/: checksums.txt  secret_ibc_rng_consumer_side_proxy.wasm
consumer-side-proxy/examples/: schema.rs
consumer-side-proxy/src/: contract.rs  ibc.rs  msg.rs  state.rs
consumer-side/artifacts/: checksums.txt  secret_ibc_rng_consumer_side_proxy.wasm
consumer-side/node/: .env  execute.js  package-lock.json  package.json
consumer-side/src/: contract.rs  msg.rs
ibc-hooks-contract/: Cargo.toml
ibc-hooks-contract/node/: execute.js  index.js  package-lock.json
ibc-hooks-contract/src/: contract.rs  lib.rs  msg.rs  random.rs  state.rs
rng-contract/: Cargo.toml
rng-contract/node/: execute.js  index.js  package-lock.json  package.json  query.js
rng-contract/src/: contract.rs  msg.rs  state.rs
